alignment on welcome-section and social-media-navbar's titles fixed

--- a/styles.css
+++ b/styles.css
@@ -358,6 +358,10 @@ footer{
 
 		display:flex;
 	}
+
+	#welcome-section h1, #social-media-navbar{
+		text-align:center;
+	}
 }
 
 /*-----------------------------------
